# pytest-golden

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
.tools/: ci.sh  copier-answers.yml  release.sh  test.sh
example/: foo.py  pyproject.toml
example/tests/: test_foo.py
example/tests/test_add1/: test_1.yml
example/tests/test_find_words/: test_basic.yml  test_quotation.yml
pytest_golden/: __init__.py  paths.py  plugin.py  yaml.py
tests/: test_plugin.py
tests/full/: test_assert_in_helper_function.yml  test_empty.yml  test_golden_root.yml  test_missing_file.yml  test_missing_key.yml  test_multiline_at_root.yml  test_mutate.yml  test_mutate_after.yml  test_no_matched_files.yml  test_preserve_comment_at_beginning.yml  test_unused_field.yml  test_update.yml  test_without_assertion_pass_hook.yml
