[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-golden"
description = "Plugin for pytest that offloads expected outputs to data files"
readme = "README.md"
license = "MIT"
keywords = ["pytest", "pytest-plugin"]
authors = [
    {name = "Oleh Prypin", email = "oleh@pryp.in"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Framework :: Pytest",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing :: Unit",
    "Typing :: Typed",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "pytest >=6.1.2",
    "ruamel.yaml >=0.16.12, <1.0",
    "atomicwrites >=1.4.0",
    "testfixtures >=6.15.0",
]

[project.urls]
Documentation = "https://github.com/oprypin/pytest-golden#readme"
Source = "https://github.com/oprypin/pytest-golden"
Issues = "https://github.com/oprypin/pytest-golden/issues"

[project.entry-points."pytest11"]
pytest-golden = "pytest_golden.plugin"

[tool.hatch.version]
path = "pytest_golden/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/pytest_golden", "/tests"]

[tool.hatch.env]
requires = ["hatch-pip-compile >=1.7.0"]

[tool.hatch.envs.default.scripts]
all = [
    "hatch run style:fix",
    "hatch run types:check",
    "hatch run test:test",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
]
[tool.hatch.envs.test.scripts]
test = [
    "pytest -q {args}",
    "bash .tools/test.sh {args}",
]

[tool.hatch.envs.types]
dependencies = [
    "mypy",
    "types-atomicwrites",
]
[tool.hatch.envs.types.scripts]
check = "mypy {args} pytest_golden"

[tool.hatch.envs.style]
type = "pip-compile"
detached = true
dependencies = [
    "ruff",
]
[tool.hatch.envs.style.scripts]
check = "ruff check pytest_golden tests {args}"
format = "ruff format -q pytest_golden tests"
fix = [
    "check --fix --unsafe-fixes",
    "format",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
preview = true
select = [
    "F", "E", "W", "I", "UP", "YTT", "FBT", "C4", "DTZ", "T10", "FA", "ISC", "PIE", "T20", "RSE", "TCH",
    "N803", "N804", "N805", "N806", "N807", "N815", "N816", "N999",
    "B002", "B003", "B004", "B005", "B007", "B008", "B009", "B010", "B011", "B012", "B013", "B014", "B015", "B016", "B017", "B018", "B019", "B020", "B021", "B022", "B023", "B025", "B026", "B029", "B030", "B031", "B032", "B033", "B034", "B035", "B039", "B905", "B909",
    "COM818",
    "LOG001", "LOG007", "LOG009",
    "G001", "G002", "G003", "G010", "G101", "G201", "G202",
    "Q004",
    "RET502", "RET503", "RET504",
    "SIM101", "SIM103", "SIM105", "SIM107", "SIM109", "SIM110", "SIM113", "SIM114", "SIM118", "SIM201", "SIM202", "SIM208", "SIM210", "SIM211", "SIM212", "SIM220", "SIM221", "SIM222", "SIM223", "SIM300", "SIM401", "SIM910", "SIM911",
    "PTH201",
    "TD004", "TD005", "TD007",
    "PGH003", "PGH004", "PGH005",
    "PLC0105", "PLC0131", "PLC0132", "PLC0205", "PLC0206", "PLC0208", "PLC0414", "PLC2401", "PLC2403", "PLC2701", "PLC2801", "PLC3002",
    "PLR0124", "PLR0133", "PLR0202", "PLR0203", "PLR0206", "PLR0402", "PLR1716", "PLR1722", "PLR1733", "PLR1736", "PLR2044", "PLR6301",
    "TRY201", "TRY203", "TRY401",
    "FLY002",
    "PERF101", "PERF102", "PERF402", "PERF403",
    "FURB101", "FURB103", "FURB105", "FURB110", "FURB116", "FURB118", "FURB129", "FURB131", "FURB132", "FURB136", "FURB145", "FURB148", "FURB154", "FURB156", "FURB157", "FURB161", "FURB163", "FURB164", "FURB166", "FURB167", "FURB168", "FURB169", "FURB171", "FURB177", "FURB180", "FURB181", "FURB188", "FURB192",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF006", "RUF007", "RUF008", "RUF009", "RUF010", "RUF012", "RUF013", "RUF015", "RUF016", "RUF017", "RUF018", "RUF019", "RUF020", "RUF021", "RUF022", "RUF023", "RUF024", "RUF026", "RUF028", "RUF029", "RUF030", "RUF031", "RUF032", "RUF033", "RUF034", "RUF100", "RUF101", "RUF200",
]
ignore = ["E501", "E731"]
[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true
[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "collections.abc"]

[tool.mypy]
warn_unreachable = true
allow_redefinition = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--tb=native"
enable_assertion_pass_hook = true
filterwarnings = ["ignore::DeprecationWarning:.*:",
                  "default::DeprecationWarning:pytest_golden.*:"]
testpaths = ["tests"]
